TP4/mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    app: mysql
spec:
  containers:
  - name: mysql-container
    image: mysql:latest
    ports:
    - containerPort: 3306
